--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
       <p>Har jeet par instant paisa.</p>
     </div>
     <div class="card">
-      <h3>✅ Trusted Players</h3>
-      <p>Official Deposit No: <strong>8920707064</strong></p>
+      <h3>✅ Trusted Group</h3>
+      <p>Official Deposit No: <strong>9670814522</strong></p>
     </div>
   </section>
 
