--- a/index.html
+++ b/index.html
@@ -172,8 +172,9 @@
     <h1>Welcome to JokerLudo Group! 🎉</h1>
     <p>Make Your Luck with JokerLudo – India’s Trusted Ludo Earning Platform!</p>
     <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn">Join Now</a>
-    <div style="display: flex; flex-direction: column; align-items: center; gap: 15px;">
-  <a href="https://chat.whatsapp.com/YOUR-GROUP-LINK" class="join-btn" style="background: #ff5722;">Add Group</a>
+    <div style="display: flex; flex-direction: column; align-items: center; gap: 15px;"> <br>
+ <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Group</a>
+
 </div>
 
   </section>
