--- a/join.html
+++ b/join.html
@@ -16,6 +16,7 @@
       <li><a href="rules.html">Rules</a></li>
       <li><a href="join.html">Join</a></li>
       <li><a href="contact.html">Contact</a></li>
+       <li><a href="privacy.html">Privacy</a></li>
     </ul>
   </nav>
 
